--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Markdownファイルを除外
-*.md
+#*.md
 
 # 特定のMarkdownファイルを含める
 !README.md
 
 # dataディレクトリ内のMarkdownファイルのみを除外
-data/**/*.md
+#data/**/*.md
 
 # powershell_policy_before_change.txtファイルを除外
 tootls/powershell_policy_before_change.txt
